# CS499SolarCarTimer

./: MANIFEST.in  README.md  buildExecutable.sh  environment.yml  pyinstaller_crossplatform.spec  requirements.txt  setup.cfg
Docs/: About.html
Install/: Instructions.txt  Linux_Instructions  createBin.py  createEnv.py  createInstall.py  envBuild_Linux.txt  envBuild_Windows.txt  setup.py
SCTimeUtility/: __init__.py  __main__.py
SCTimeUtility/App/: App.py  AppWindow.py  __init__.py
SCTimeUtility/Graph/: Graph.py  GraphWidget.py  LeaderBoard.py  LeaderBoardWidget.py  Plot.py  Plots.py  __init__.py
SCTimeUtility/LeaderBoard/: LeaderBoard.py  LeaderBoardModel.py  LeaderBoardSortFilterProxyModel.py  LeaderBoardWidget.py  __init__.py
SCTimeUtility/Log/: Log.py  LogFilters.py  LogWidget.py  __init__.py
SCTimeUtility/OCR/: environment.yml  video_detection.py
SCTimeUtility/Resources/: AppWindow.ui  Log.ui  __init__.py
SCTimeUtility/System/: FileSystem.py  Graphics.py  IO.py  Prediction.py  TimeReferences.py  Validation.py  __init__.py
SCTimeUtility/Table/: AddBatchDialog.py  AddCarDialog.py  Car.py  CarStorage.py  ElidedLabel.py  LapTime.py  LaptimeR.py  SemiAuto.py  Table.py  TableModel.py  TableWidget.py  __init__.py
SCTimeUtility/Video/: CaptureThread.py  DetectionThread.py  ImageProcessThread.py  Video.py  VideoOptionsWidget.py  VideoWidget.py  __init__.py
SCTimeUtility/app/: App.py  AppWindow.py  __init__.py
SCTimeUtility/graph/: Graph.py  LeaderBoard.py  LeaderBoardModel.py  LeaderBoardSortFilterProxyModel.py  LeaderBoardWidget.py  __init__.py
SCTimeUtility/log/: Log.py  LogWidget.py  logFilters.py
SCTimeUtility/resources/: GraphOptions.ui  Log.ui  SemiAuto.ui
SCTimeUtility/system/: FileSystem.py  Graphics.py  IO.py  Prediction.py  TimeReferences.py  Validation.py
SCTimeUtility/table/: AddBatchDialog.py  AddCarDialog.py  Car.py  CarStorage.py  ElidedLabel.py  LapTime.py  SemiAuto.py  Table.py  TableModel.py  TableWidget.py  __init__.py
SCTimeUtility/video/: CaptureThread.py  DetectionThread.py  ImageProcessThread.py  Video.py  VideoOptionsWidget.py  VideoWidget.py  VisionWidget.py
Scripts/DataGen/: CSVFileGen.py
Scripts/Dev/: Instructions.txt
Scripts/package/: createShortcut.py
Tests/App/: testApp.py  testAppWindow.py
Tests/DataGen/: DataGeneration.py
Tests/Graph/: testLeaderBoard.py  testLeaderBoardWidget.py
Tests/Log/: testlogFilters.py
Tests/System/: testPrediction.py  testValidation.py
Tests/Table/: testAddCarDialog.py  testCar.py  testCarStorage.py  testElidedLabel.py  testLapTime.py  testSemiAutoWidget.py  testTable.py  testTableWidget.py
Tests/Video/: testDetectionThread.py  testVideo.py
manuals/: ADMINISTRATOR_MANUAL.html  ADMINISTRATOR_MANUAL.md  USER_MANUAL.html  USER_MANUAL.md  about.html
resources/: AboutDialog.ui  AddBatchDialog.ui  App.ui  AppWindow.ui  Buttons.ui  DirectoryDialog.ui  ElidedLabelTestWidget.ui  Graph.ui  GraphOptions.ui  HelpDialog.ui  LeaderBoard.ui  Log.ui  QuitDialog.ui  SemiAuto.ui  Table.ui  TableView.ui  Video.ui  addCarDialog.ui
scripts/: createShortcut.py
scripts/DataGen/: CSVFileGen.py
scripts/example/: OCR.py
scripts/test-data/: GenerateLapTimes.py
src/: App.py  ButtonWidget.py  CaptureThread.py  Car.py  CarStorage.py  ImageCanvas.py  ImageThread.py  LogWidget.py  SAButtonWidget.py  Table.py  VisionWidget.py  main.py  table.py
src/OCR/: environment.yml  image_detection.py  video_detection.py
src/app/: App.py  AppWindow.py
src/graph/: Graph.py  GraphOptions.py  GraphOptionsWidget.py  GraphWidget.py  LeaderBoard.py  LeaderBoardModel.py  LeaderBoardSortFilterProxyModel.py  LeaderBoardWidget.py
src/log/: Log.py  LogWidget.py
src/system/: Graphics.py  IO.py  Prediction.py  Time.py  TimeReferences.py  (+2 more)
tests/: testApp.py  testGraph.py  testSemiAuto.py  testTable.py  testVideo.py
(+80 files in other folders)
