[metadata]
name = SolarCarTimingUtility
version = 1.1
author= Charles Andrews  Andrew  Tapia Tanner  Coffman  Parker Back
author_email= N/A
description = Timing Utility for tracking lap times.
url= Team3.me
platform = Windows, Linux, Mac OS
keywords = Solar Car, Solar, Car, Timing Utility, Timing, Utility
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
packages=
    src
    src/app
    src/graph
    src/log
    src/system
    src/table
    src/video
include_package_data=True
install_requires =
    python >= 3.6
    numpy >= 1.15.4
    scipy >= 1.15.4
    matplotlib >= 2.2.3
    pyqt >= 5.6.0
    opencv-contrib-python >= 3.4.3
    pywin32 >= 1.0; platform_system == "Windows"
    tesseract >= 0.1.3
    imutils >= 0.5.2

[options.packages.find]
where=
    =src
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
