[metadata]
name = SCTimeUtility
version = 1.1.7
author= Charles Andrews  Andrew  Tapia Tanner Coffman  Parker Back
author_email= N/A
description = Timing Utility for tracking lap times.
url= Team3.me
platform = Windows, Linux, Mac OS
keywords = Solar Car, Solar, Car, Timing Utility, Timing, Utility
classifiers =
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
packages=
    SCTimeUtility
    SCTimeUtility/Resources
    SCTimeUtility/App
    SCTimeUtility/Graph
    SCTimeUtility/Log
    SCTimeUtility/System
    SCTimeUtility/Table
    SCTimeUtility/Video
    SCTimeUtility/LeaderBoard
    SCTimeUtility/Resources/UI
include_package_data=True

install_requires =
    numpy >= 1.15.4
    matplotlib >= 2.2.3
    PyQt5 >= 5.6.0
    opencv-contrib-python >= 3.4.3
    pywin32 >= 1.0; platform_system == "Windows"
    imutils >= 0.5.2
    pandas >= 0.24.1

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests

[bdist_wheel]
universal = 1

[bdist_rpm]
release = 1.1.7
group= Team 3 (Charles Andrews  Andrew  Tapia Tanner  Coffman  Parker Back)
packager = Charles Andrews <cjan225@g.uky.edu>
doc_files = CHANGES.txt
            README.md
            manuals/
requires =
    numpy >= 1.15.4
    matplotlib >= 2.2.3
    PyQt5 >= 5.6.0
    opencv-contrib-python >= 3.4.3
    pywin32 >= 1.0; platform_system == "Windows"
    pandas >= 0.24.1
